--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,7 +18,7 @@ mybatis-plus:
   #mapper-locations: classpath:/mapper/*Mapper.xml
   #type-enums-package: com.git.enums.BaseEnum
   #实体扫描，多个package用逗号或者分号分隔
-  typeAliasesPackage: com.git.poi.pojo
+  typeAliasesPackage: com.git.pojo
   global-config:
     db-config:
       id-type: auto #主键类型  0:"数据库ID自增", 1:"用户输入ID",2:"全局唯一ID (数字类型唯一ID)", 3:"全局唯一ID UUID";
